Closed Bug 39653 Opened 25 years ago Closed 25 years ago

Fix SSO to describe obscure/encrypt choice better

Categories

(SeaMonkey :: Passwords & Permissions, defect, P3)

All
Linux
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: selmer, Assigned: morse)

References

Details

(Whiteboard: [nsbeta2+])

Our final resolution is that we want to go with the obscuring/encrypting choice and we just need to clarify the UI somewhat. Here's what we need: 1. All dialogs with a "save password" type of checkbox need to clearly describe the obscuring/encrypting mode we're in. The wording is to be determined by the appropriate UI/docs people. 2. The first time through one of these dialogs, an alert comes up to ensure the user understands what type of protection they're getting and that they can change it. Again, wording from UI/docs people. 3. The "enter master password" prompt dialog needs to be branded for PSM and clearly state which password is being requested.
Please add others to the CC if necessary. Nominating for beta2 for obvious reasons.
Keywords: nsbeta2
For points (1) and (2), I have some proposed wording up for discussion. When I hear back I'll revise as necessary and post it here.
I accept items 1 and 2 of this bug report. I just opened a separate report for item 3 and assigned it to thayes. It's bug 39658.
Status: NEW → ASSIGNED
Target Milestone: --- → M17
Verah, please run your proposed wording though Kent Walker.
*** Bug 39338 has been marked as a duplicate of this bug. ***
Putting on [nsbeta2+] radar for beta2 fix.
Whiteboard: [nsbeta2+]
Perhaps a easy dialog like this: "Please enter your username and password for the following server: Server : fep2.sprawl.dk Username: [hegetest____________] Password: [____________________] [ ] Remember password That would be soo much easier to understand for the user. Futhermore you have the ability to change the username incase you misspelled at the time of creation.
Fix checked in. Changed files were singsign.cpp, singsign.h, wallet.cpp, wallet.h, wallet.properties. The actual wording on the dialogs is still not yet cast in stone. But that's trivial to change -- the wording itself is in wallet.properties.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
The alert that appears when having checked "save password" during a mail account wizard setup, appears *behind* the wizard on linux. The top and right side is partly visible, but users don't expect important messages to hide like that. While it hides, buttons on wizard are blocked. I had to look around a little to find that there was another dialog hiding, expecting me to click an OK button i didn't see. M16 Linux 2000-052708
The symptoms described above are a platform-parity issue -- it works fine on a windows box running NT. The dialog is neither behind the wizard, nor is the wizard blocked while the dialog box appears. You should probably open a separate bug report on this problem (don't morph this one). I'm not sure if it is a wizard problem (in which case you should assign it to the mailnews team) or a dialog problem (assign to xp-apps team). So you need to decide. cc me on any new reports that you file.
OS: All → Linux
verif.
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.