bug 39653, describe obscure/encrypt choice better to reduce our liability, r=dp